--- a/param/realsense.yaml
+++ b/param/realsense.yaml
@@ -3,14 +3,14 @@
 #==============#
 
 Camera:
-  name: "RealSense T265"
-  setup: "stereo"
-  model: "fisheye"
+  name: "RealSense D455"
+  setup: "RGBD"
+  model: "perspective"
 
-  fx: 504.06574113820596
-  fy: 504.06574113820596
-  cx: 434.12909126281738
-  cy: 345.42371940612793
+  fx: 386.081390380859
+  fy: 386.081390380859
+  cx: 321.873748779297
+  cy: 238.113525390625
 
   k1: 0
   k2: 0
@@ -20,12 +20,13 @@ Camera:
   p2: 0
 
   fps: 30.0
-  cols: 848
-  rows: 800
 
-  focal_x_baseline: 32.764225
+  cols: 640
+  rows: 480
 
-  color_order: "Gray"
+  focal_x_baseline: 0
+
+  color_order: "RGB"
 
 #======================#
 # Stereo Rectification #
@@ -34,122 +35,17 @@ Camera:
 # original intrinsic parameters (K, D) and stereo-recitification parameters (R)
 # matrices (K, R) are written in row-major order
 
-StereoRectifier:
-  K_left: [286.6408996582031, 0.0, 429.8493957519531, 0.0, 286.5458068847656, 393.5089111328125, 0.0, 0.0, 1.0]
-  D_left: [-0.011200119741261005, 0.05016331002116203, -0.04697997868061066, 0.0091929966583848, 0.0]
-  R_left: [9.9999809020842290e-01, 1.9543744540909212e-03, 0.,
-       -1.9543744540909212e-03, 9.9999809020842290e-01, 0., 0., 0., 1.]
-  K_right: [286.157, 0.0, 423.534, 0.0, 286.008, 401.768, 0.0, 0.0, 1.0]
-  D_right: [-0.00927463,0.0461914,-0.043395,0.00802249,0]
+#StereoRectifier:
+#  K_left: [286.6408996582031, 0.0, 429.8493957519531, 0.0, 286.5458068847656, 393.5089111328125, 0.0, 0.0, 1.0]
+#  D_left: [-0.011200119741261005, 0.05016331002116203, -0.04697997868061066, 0.0091929966583848, 0.0]
+#  R_left: [9.9999809020842290e-01, 1.9543744540909212e-03, 0.,
+#       -1.9543744540909212e-03, 9.9999809020842290e-01, 0., 0., 0., 1.]
+#  K_right: [286.157, 0.0, 423.534, 0.0, 286.008, 401.768, 0.0, 0.0, 1.0]
+#  D_right: [-0.00927463,0.0461914,-0.043395,0.00802249,0]
+#
+#  R_right: [9.9999824795411607e-01, 1.8719211249596192e-03, 0.,
+#       -1.8719211249596194e-03, 9.9999824795411607e-01, 0., 0., 0., 1.]
 
-  R_right: [9.9999824795411607e-01, 1.8719211249596192e-03, 0.,
-       -1.8719211249596194e-03, 9.9999824795411607e-01, 0., 0., 0., 1.]
-
- #======================#
-# Taken from rs-sensor-control 
-#fisheye1
-#Principal Point         : 429.849, 393.509
-#Focal Length            : 286.641, 286.546
-#Distortion Model        : Kannala Brandt4
-#Distortion Coefficients : [-0.0112001,0.0501633,-0.04698,0.009193,0]
-
-#fisheye2
-#Principal Point         : 423.534, 401.768
-#Focal Length            : 286.157, 286.008
-#Distortion Model        : Kannala Brandt4
-#Distortion Coefficients : [-0.00927463,0.0461914,-0.043395,0.00802249,0]
-
-#fisheye1>fisheye2
-#Translation Vector : [-0.0640212,-0.000119843,-8.24535e-05]
-#Rotation Matrix    : [0.999973,0.00361533,-0.00632303]
-#                   : [-0.00360718,0.999993,0.00130074]
-#                  : [0.00632768,-0.0012779,0.999979]
-     
-#fisheye2>fisheye1
-#Translation Vector : [0.0640196,0.000351195,-0.0003222]
-#Rotation Matrix    : [0.999973,-0.00360718,0.00632768]
-#                   : [0.00361533,0.999993,-0.0012779]
-#                   : [-0.00632303,0.00130074,0.999979]
-#======================#
-# Taken from rtabmap
-# ---
-#camera_name: t265_rtab_left
-#image_width: 848
-#image_height: 800
-#camera_matrix:
-#   rows: 3
-#   cols: 3
-#   data: [ 2.8664100000000002e+02, 0., 4.2984899999999999e+02, 0.,
-#       2.8654599999999999e+02, 3.9350900000000001e+02, 0., 0., 1. ]
-#distortion_coefficients:
-#   rows: 1
-#   cols: 5
-#   data: [ -1.1200099999999999e-02, 5.0163300000000001e-02,
-#       -4.6980000000000001e-02, 9.1929999999999998e-03, 0. ]
-#distortion_model: plumb_bob
-#rectification_matrix:
-#   rows: 3
-#   cols: 3
-#   data: [ 9.9999809020842290e-01, 1.9543744540909212e-03, 0.,
-#       -1.9543744540909212e-03, 9.9999809020842290e-01, 0., 0., 0., 1. ]
-#projection_matrix:
-#   rows: 3
-#   cols: 4
-#   data: [ 5.0406574113820596e+02, 0., 4.3412909126281738e+02, 0., 0.,
-#       5.0406574113820596e+02, 3.4542371940612793e+02, 0., 0., 0., 1.,
-#      0. ]
-# ---/home/user1/ros2_workspace/src/ergoCub_ros2/param/realsense.yam65_rtab_right
-#image_width: 848
-#image_height: 800
-#camera_matrix:
-#   rows: 3
-#   cols: 3
-#   data: [ 2.8615699999999998e+02, 0., 4.2353399999999999e+02, 0.,
-#       2.8600799999999998e+02, 4.0176799999999997e+02, 0., 0., 1. ]
-#distortion_coefficients:
-#   rows: 1
-#   cols: 5
-#   data: [ -9.2746300000000007e-03, 4.6191400000000001e-02,
-#       -4.3395000000000003e-02, 8.0224900000000002e-03, 0. ]
-#distortion_model: plumb_bob
-#rectification_matrix:
-#   rows: 3
-#   cols: 3
-#   data: [ 9.9999824795411607e-01, 1.8719211249596192e-03, 0.,
-#       -1.8719211249596194e-03, 9.9999824795411607e-01, 0., 0., 0., 1. ]
-#projection_matrix:
-#   rows: 3
-#   cols: 4
-#   data: [ 5.0406574113820596e+02, 0., 4.3412909126281738e+02,
-#       -3.2270968915267993e+01, 0., 5.0406574113820596e+02,
-#       3.4542371940612793e+02, 0., 0., 0., 1., 0. ]
-# ---
-#camera_name: t265_rtab_right
-#image_width: 848
-#image_height: 800
-#camera_matrix:
-#   rows: 3
-#   cols: 3
-#   data: [ 2.8615699999999998e+02, 0., 4.2353399999999999e+02, 0.,
-#       2.8600799999999998e+02, 4.0176799999999997e+02, 0., 0., 1. ]
-#distortion_coefficients:
-#   rows: 1
-#   cols: 5
-#   data: [ -9.2746300000000007e-03, 4.6191400000000001e-02,
-#       -4.3395000000000003e-02, 8.0224900000000002e-03, 0. ]
-#distortion_model: plumb_bob
-#rectification_matrix:
-#   rows: 3
-#   cols: 3
-#   data: [ 9.9999824795411607e-01, 1.8719211249596192e-03, 0.,
-#       -1.8719211249596194e-03, 9.9999824795411607e-01, 0., 0., 0., 1. ]
-#projection_matrix:
-#   rows: 3
-#   cols: 4
-#   data: [ 5.0406574113820596e+02, 0., 4.3412909126281738e+02,
-#       -3.2270968915267993e+01, 0., 5.0406574113820596e+02,
-#        3.4542371940612793e+02, 0., 0., 0., 1., 0. ]
-# ---
 #=====================#
 # Tracking Parameters #
 #=====================#
